fix: add backdrop z-index -1

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -92,7 +92,7 @@ body.unscrollable {
 
 .backdrop {
   position: absolute;
-  /* z-index: -1; */
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
